<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="planets_array">
        <item>Electrical Engr</item>
        <item>Computer Engr</item>
        <item>Computer Science</item>
        <item>Supply Chain</item>
        <item>Finance</item>
        <item>IT</item>
        <item>Aerospace Engr</item>
        <item>Mechanical Engr</item>
    </string-array>

    <string name="app_name">InternApp</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_onboarding_resources">OnboardingResources</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_user_search">UserSearch</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="faq_heading">Frequently Asked Questions</string>
    <string name="q1">If my drive is less than 400 miles one way, will i still get reimbursed for mileage?</string>
    <string name="q2">Can I fly to my work location, then drive back and still get reimbursed for both the flight and the mileage?</string>
    <string name="q3">Can I take the AutoTrain and get reimbursed for the AutoTrain and claim the mileage of the trip as well?</string>
    <string name="q4">Can I buy a 1 way flight ticket to my work location and then buy another 1 way ticket for the way back since I dont know my end date yet?</string>
    <string name="q5">Can I get $35 a day for meals even If i spend only $20?</string>
    <string name="a1">Yes, you need to note the miles on the T&amp;L form and include the MapQuest map</string>
    <string name="a2">You need to get permission from Kim Demko first. Then get a reciept for the fuel.</string>
    <string name="a3">AutoTrains are never reimbursed</string>
    <string name="a4">All end dates are on the co-op intern website. </string>
    <string name="a5">No it is not per diem. It is the max allowance. </string>
    <string name="q6">can I provide a credit card billing statement instead of receipts?</string>
    <string name="a6">No, must be a copy of the itemized receipt showing date and city.</string>
    <string name="q7">Can I get reimbursed in advance for my baggage fees, hotels or tolls for my return trip? </string>
    <string name="a7">No, we must have paid receipts for those items.</string>
    <string name="q8">If my friend or family member drives with me to my work location, can I get reimbursed for their meals/hotel costs? </string>
    <string name="a8">No, GE only reimburses items that the employee incurs.</string>
    <string name="q9">Can I submit a T&amp;L form for reimbursement even if it more than 2 weeks after my end date?</string>
    <string name="a9">No, due to accounting practices we are not able to process 2 weeks past your end date.</string>
    <string name="q10">If for any reason I have to leave my rotation earlier than the expected end date, do I still get to keep the full reimbursement?</string>
    <string name="a10">No, it will be prorated for the actual weeks that you were working. Payroll would send you an overpayment letter for the recoupment of funds.</string>
    <string name="q11">If I am unsure whether an item can be reimbursed what shouldI do?</string>
    <string name="a11">PRIOR to making an travel arrangements or actually travelling you must email Aviation.CoopTLforms@ge.com to get approval.</string>
    <string name="title_activity_bbc">BBC</string>
    <string name="title_activity_batc">BATC</string>
    <string name="title_activity_crown_point">CrownPoint</string>
    <string name="title_activity_iwu">IWU</string>
    <string name="title_activity_np1">NP1</string>
    <string name="title_activity_np2">NP2</string>
    <string name="title_activity_evendale">Evendale</string>
    <string name="title_activity_princeton_hill">PrincetonHill</string>
    <string name="title_activity_qtc">QTC</string>
    <string name="title_activity_bldg800">Bldg800</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="title_activity_sidebar2">Sidebar2</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <!--
    <string name="title_activity_preferences_fragment">PreferencesFragment</string>
	<string name="or_hdr_first_day_chklist">I have the following items ready and with me for my 1st day</string>
    <string name="or_chklist_1">First Day Form</string>
    <string name="or_chklist_2">I-9 – My identification is original AND unexpired.</string>
    <string name="or_chklist_3">I have 1 item from List A</string>
    <string name="or_chklist_4">I have 2 items, 1 from List B and 1 from List C</string>
    <string name="or_chklist_5">Badging – I have a US Passport, Birth Certificate, or Permanent Resident Card.  It is an original, copy, expired, or unexpired identification.</string>
    <string name="or_chklist_6">Official Transcript</string>
	<string name="or_chklist_7">I have read the Travel and Living Guidelines, Form, and Chart.</string>
	<string name="or_hdr_imp_contact_info">Important Contact Information</string>
	<string name="or_contact_info_help_desk_name">Help Desk</string>
	<string name="or_imp_contact_info_hd_t">T. 513-552-4357</string>
	<string name="or_imp_contact_info_kim">Kim Demko - Recruiter</string>
	<string name="or_imp_contact_info_kim_t">T. 513-243-7193</string>
	<string name="or_imp_contact_info_kim_e">E. kimberly.demko@ge.com</string>
	<string name="or_imp_contact_info_andrea">Andrea Steindl – HR Administrator</string>
	<string name="or_imp_contact_info_andrea_t">T. 513-243-5208</string>
	<string name="or_imp_contact_info_andrea_e">E. andrea.steindl@ge.com</string>
	<string name="or_tasks">List of Onboarding Tasks</string>
	<string name="or_tasks_a">Request for Pin</string>
	<string name="or_tasks_b">Setup Direct Deposit</string>
	<string name="or_tasks_c">Update Picture in Support Central</string>
	<string name="or_tasks_d">Verify Personal Information in Support Central</string>
	<string name="or_tasks_e">Update Phone Number in Outlook</string>
    -->
    <string name="title_activity_preferences_fragment">PreferencesFragment</string>
    <string name="title_activity_test_side_bar">TestSideBar</string>
    <string name="or_hdr_first_day_chklist">I have the following items ready and with me for my 1st day</string>
    <string name="or_chklist_1"> &#8226; First Day Form</string>
    <string name="or_chklist_2"> &#8226; I-9 – My identification is original AND unexpired.</string>
    <string name="or_chklist_3"> &#8226; I have 1 item from List A</string>
    <string name="or_chklist_4"> &#8226; I have 2 items, 1 from List B and 1 from List C</string>
    <string name="or_chklist_5"> &#8226; Badging – I have a US Passport, Birth Certificate, or Permanent Resident Card.  It is an original, copy, expired, or unexpired identification.</string>
    <string name="or_chklist_6"> &#8226; Official Transcript</string>
    <string name="or_chklist_7"> &#8226; I have read the Travel and Living Guidelines, Form, and Chart.</string>
    <string name="or_hdr_imp_contact_info">Important Contact Information</string>
    <string name="or_contact_info_help_desk_name">Help Desk</string>
    <string name="or_imp_contact_info_hd_t"> &#8226; T. 513-552-4357</string>
    <string name="or_imp_contact_info_kim">Kim Demko - Recruiter</string>
    <string name="or_imp_contact_info_kim_t"> &#8226; T. 513-243-7193</string>
    <string name="or_imp_contact_info_kim_e"> &#8226; E. kimberly.demko@ge.com</string>
    <string name="or_imp_contact_info_andrea">Andrea Steindl – HR Administrator</string>
    <string name="or_imp_contact_info_andrea_t"> &#8226; T. 513-243-5208</string>
    <string name="or_imp_contact_info_andrea_e"> &#8226; E. andrea.steindl@ge.com</string>
    <string name="or_tasks">List of Onboarding Tasks</string>
    <string name="or_tasks_a"> &#8226; Request for Pin</string>
    <string name="or_tasks_b"> &#8226; Setup Direct Deposit</string>
    <string name="or_tasks_c"> &#8226; Update Picture in Support Central</string>
    <string name="or_tasks_d"> &#8226; Verify Personal Information in Support Central</string>
    <string name="or_tasks_e"> &#8226; Update Phone Number in Outlook</string>
    <string name="or_first_day_chlist_heading">1st day checklist</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_testing123">Testing123</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="title_activity_edit_profile">EditProfile</string>

</resources>