<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
 
    
    <!-- The main content view -->
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.internapp.OnboardingResources" >
    
    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        
        
        
        <TextView
            style="@style/txt_faq_q"
            android:id="@+id/or_hdr_first_day_chklist"
            
            android:layout_below="@+id/textView1"
            android:text="@string/or_hdr_first_day_chklist" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_1"
            
            android:layout_below="@+id/or_hdr_first_day_chklist"
            android:text="@string/or_chklist_1" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_2"
            
            android:layout_below="@+id/or_chklist_1"
            android:text="@string/or_chklist_2" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_3"
            
            android:layout_below="@+id/or_chklist_2"
            android:text="@string/or_chklist_3" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_4"
            
            android:layout_below="@+id/or_chklist_3"
            android:text="@string/or_chklist_4" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_5"
            
            android:layout_below="@+id/or_chklist_4"
            android:text="@string/or_chklist_5" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_6"
            
            android:layout_below="@+id/or_chklist_5"
            android:text="@string/or_chklist_6" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_chklist_7"
            
            android:layout_below="@+id/or_chklist_6"
            android:text="@string/or_chklist_7" />
        
        <TextView
            style="@style/txt_faq_q"
            android:id="@+id/or_hdr_imp_contact_info"
            
            android:layout_below="@+id/or_chklist_7"
            android:text="@string/or_hdr_imp_contact_info" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_contact_info_help_desk_name"
            
            android:layout_below="@+id/or_hdr_imp_contact_info"
            android:text="@string/or_contact_info_help_desk_name" />
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_contact_info_hd_t"
            
            android:layout_below="@+id/or_contact_info_help_desk_name"
            android:text="@string/or_contact_info_help_desk_name" />
        
         <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_imp_contact_info_kim"
            
            android:layout_below="@+id/or_contact_info_hd_t"
            android:text="@string/or_imp_contact_info_kim" />
         
         <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_imp_contact_info_kim_t"
            
            android:layout_below="@+id/or_imp_contact_info_kim"
            android:text="@string/or_imp_contact_info_kim_t" />
         
         <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_imp_contact_info_kim_e"
            
            android:layout_below="@+id/or_imp_contact_info_kim_t"
            android:text="@string/or_imp_contact_info_kim_e" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_imp_contact_info_andrea"
            
            android:layout_below="@+id/or_imp_contact_info_kim_e"
            android:text="@string/or_imp_contact_info_andrea" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_imp_contact_info_andrea_t"
            
            android:layout_below="@+id/or_imp_contact_info_andrea"
            android:text="@string/or_imp_contact_info_andrea_t" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_imp_contact_info_andrea_e"
            
            android:layout_below="@+id/or_imp_contact_info_andrea_t"
            android:text="@string/or_imp_contact_info_andrea_e" />
        
        <TextView
            style="@style/txt_faq_q"
            android:id="@+id/or_tasks"
            
            android:layout_below="@+id/or_imp_contact_info_andrea_e"
            android:text="@string/or_tasks" />
        

        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_tasks_a"
            
            android:layout_below="@+id/or_tasks"
            android:text="@string/or_tasks_a" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_tasks_b"
            
            android:layout_below="@+id/or_tasks_a"
            android:text="@string/or_tasks_b" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_tasks_c"
            
            android:layout_below="@+id/or_tasks_b"
            android:text="@string/or_tasks_c" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_tasks_d"
            
            android:layout_below="@+id/or_tasks_c"
            android:text="@string/or_tasks_d" />
        
        <TextView
            style="@style/txt_faq_a"
            android:id="@+id/or_tasks_e"
            
            android:layout_below="@+id/or_tasks_d"
            android:text="@string/or_tasks_e" />
        
     </RelativeLayout>
     
    </ScrollView>
 
    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="225dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:background="#3a5dae"
        android:layout_gravity="start">
 
        <!-- Profile Box -->
 <!-- 
        <RelativeLayout
            android:id="@+id/profileBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/material_blue_grey_800"
            android:padding="8dp" >
 
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher"
                android:layout_marginTop="15dp" />
 
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/avatar"
                android:orientation="vertical" >
 
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rishabh"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
 
                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:text="View Profile"
                    android:textColor="#fff"
                    android:textSize="12sp" />
            </LinearLayout>
            
            
        </RelativeLayout> -->
 
        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileBox"
            android:choiceMode="singleChoice"
            android:background="#3a5dae" />
 
    </RelativeLayout>
 
</android.support.v4.widget.DrawerLayout>